[package]
name = "minecraft"
version = "0.1.0"
authors = ["PeterTiny1 <56882034+PeterTiny1@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
wgpu = "0.20"
futures = "0.3"
bytemuck = { version = "1.15", features = ["derive"] }
vek = { version = "0.16", default-features = false }
noise = { version = "0.9", default-features = false }
itertools = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.8.1"
bincode = "1.3"
winit = "0.30"
half = { version = "2.4.1", default-features = false, features = ["bytemuck"] }

[dependencies.image]
version = "0.25"
default-features = false
features = ["png"]

[profile.release]
debug = true
