[package]
name = "minecraft"
version = "0.1.0"
authors = ["PeterTiny1 <56882034+PeterTiny1@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
wgpu = "26.0"
futures = "0.3.31"
bytemuck = { version = "1.23", features = ["derive"] }
vek = { version = "0.17", default-features = false }
noise = { version = "0.9", default-features = false }
itertools = "0.14"
bincode = "2.0"
winit = "0.30"
half = { version = "2.6", default-features = false, features = ["bytemuck"] }

[dependencies.image]
version = "0.25"
default-features = false
features = ["png"]

[profile.release]
lto = true
# debug = true
