[package]
name = "minecraft"
version = "0.1.0"
authors = ["PeterTiny1 <56882034+PeterTiny1@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.8"
log = "0.4.28"
wgpu = "27.0"
bytemuck = { version = "1.24", features = ["derive"] }
vek = { version = "0.17", default-features = false }
noise = { version = "0.9", default-features = false }
bincode = "2.0"
winit = "0.30"
half = { version = "2.7", default-features = false, features = ["bytemuck"] }
pollster = "0.4.0"

[dependencies.image]
version = "0.25"
default-features = false
features = ["png"]
# lto = true
# debug = true
